# vpie-rs

./: .gitignore  Cargo.toml  pyproject.toml  readme.rst
src/: bic.rs  coeffs.rs  core.rs  lib.rs  search.rs
vpie/: __init__.py  wrappers.py
